// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should not render if there happens to be no children or data 1`] = `null`;

exports[`Notification should render error type when error prop is passed 1`] = `
<div
  className="alert alert--error"
>
  there was an error
</div>
`;

exports[`Notification should render notification of info type when info prop is passed 1`] = `
<div
  className="alert alert--info"
>
  info here
</div>
`;

exports[`Notification should render notification of success type when success prop is passed 1`] = `
<div
  className="alert alert--success"
>
  success here
</div>
`;

exports[`Notification should render notification of warning type when warning prop is passed 1`] = `
<div
  className="alert alert--warning"
>
  warning here
</div>
`;
